--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -45,6 +45,24 @@
   transform: scale(1.05);
 }
 
+.nav-links.mobile {
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  transform: translateY(-10px);
+  transition: all 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+}
+
+.nav-links.mobile.show {
+  max-height: 500px; /* Lo suficientemente grande para contener todos los elementos */
+  opacity: 1;
+  transform: translateY(0);
+}
+
 /* Avatar y perfil */
 .profile {
   display: flex;
@@ -151,9 +169,6 @@
     font-size: 16px;
     padding: 10px;
     text-align: center;
-    background-color: #4CAF50;
-    /* Color de fondo de los enlaces */
-    color: white;
   }
 
   .hamburger {
